--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,10 @@ anthropic = "^0.40.0"
 tavily-python = "^0.5.0"
 openai = "^1.55.3"
 python-multipart = "^0.0.18"
+aiohttp = "^3.11.8"
+beautifulsoup4 = "^4.12.3"
+langchain-openai = "^0.2.10"
+duckduckgo-search = "^6.3.7"
 
 
 [tool.poetry.group.dev.dependencies]
