--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -2,11 +2,15 @@
   "manifest_version": 3,
   "name": "Chatbot Assistant",
   "version": "1.0",
-  "description": "A chatbot extension with file upload capability",
+  "description": "A chatbot assistant for web browsing",
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
+  "host_permissions": [
+    "http://localhost:8000/*"
+  ],
   "action": {
     "default_popup": "popup.html"
-  },
-  "permissions": [
-    "storage"
-  ]
+  }
 }
