--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ aiohttp = "^3.11.8"
 beautifulsoup4 = "^4.12.3"
 langchain-openai = "^0.2.10"
 duckduckgo-search = "^6.3.7"
+tenacity = "^9.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
