--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,8 +17,18 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
+            # Pull latest changes
             cd ~/Final-Project
             git pull origin main
-            cd Airflow
-            sudo docker-compose down
-            sudo docker-compose up -d --build
+
+            # Deploy Airflow
+            echo "Deploying Airflow..."
+            cd ~/Final-Project/Airflow
+            docker-compose down
+            docker-compose up -d --build
+
+            # Deploy FastAPI
+            echo "Deploying FastAPI..."
+            cd ~/Final-Project
+            docker-compose down
+            docker-compose up -d --build
