--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main, data-ingestion ]
+    branches: [ main, development, data-ingestion ]
   pull_request:
     branches: [ main ]
 
@@ -34,5 +34,5 @@ jobs:
 
     - name: Run tests
       run: |
-        cd backend
-        poetry run pytest tests/ -v
+        cd test_cases
+        poetry run pytest test_webagent.py -v
