--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,16 @@ name: CI
 
 on:
   push:
-    branches: [ main, development, data-ingestion ]
+    branches: [ main, data-ingestion ]
   pull_request:
     branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend  
     
     steps:
     - uses: actions/checkout@v2
@@ -24,15 +27,13 @@ jobs:
         
     - name: Configure Poetry
       run: |
-        cd backend
         poetry config virtualenvs.create false
         
     - name: Install dependencies
       run: |
-        cd backend
         poetry install
 
     - name: Run tests
+      working-directory: ./  
       run: |
-        cd test_cases
-        poetry run pytest test_webagent.py -v
+        poetry run pytest test_cases/test_webagent.py -v
