--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ main ]
 
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -34,6 +33,18 @@ jobs:
       run: |
         poetry install
 
+    - name: Debug Environment
+      run: |
+        echo "Checking for OPENAI_API_KEY presence:"
+        if [ -n "$OPENAI_API_KEY" ]; then
+          echo "OPENAI_API_KEY is set"
+        else
+          echo "OPENAI_API_KEY is NOT set"
+        fi
+        
     - name: Run tests
+      env:
+        PYTHONPATH: ${{ github.workspace }}/backend
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         poetry run pytest test_cases/test_webagent.py -v
