--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ beautifulsoup4 = "^4.12.3"
 langchain-openai = "^0.2.10"
 duckduckgo-search = "^6.3.7"
 tenacity = "^9.0.0"
+langchain-nvidia-ai-endpoints = "^0.3.5"
 
 
 [tool.poetry.group.dev.dependencies]
