--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ langchain-openai = "^0.2.10"
 duckduckgo-search = "^6.3.7"
 tenacity = "^9.0.0"
 boto3 = "^1.35.79"
+pinecone-client = "^5.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
