--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ duckduckgo-search = "^6.3.7"
 tenacity = "^9.0.0"
 boto3 = "^1.35.79"
 pinecone-client = "^5.0.1"
+llama-parse = "^0.5.17"
 
 
 [tool.poetry.group.dev.dependencies]
